# crew_longterm_memory

./: .gitignore  output.md  report.md  requirements.txt
database/: README.md  pyproject.toml
database/src/database/: connect_db.py  crew.py  final_blog.md  keywords.md  main.py  memorybackend.py  seo_blog.md
database/src/database/config/: agents.yaml  tasks.yaml
database/src/database/db/: chroma.sqlite3
database/src/database/tools/: custom_tool.py
