[project]
name = "database"
version = "0.1.0"
description = "DataBase using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.105.0,<1.0.0"
]

[project.scripts]
database = "database.main:run"
run_crew = "database.main:run"
train = "database.main:train"
replay = "database.main:replay"
test = "database.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
